--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block body %}
+    <p>继承了 base.html 文件</p>
+{% endblock %}
