--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -1,5 +1,79 @@
 {% extends "base.html" %}
 
 {% block body %}
-    <p>继承了 base.html 文件</p>
+<div class="container">
+	<div class="row">
+		<div class="span12">
+			<h2>
+				event
+			</h2>
+			<p>
+				together, together, together, together, together, together, together, together, .together, together, together, together, together, together, together, together.
+			</p>
+			<p>
+				<a class="btn" href="#">查看更多 »</a>
+			</p>
+		</div>
+	</div>
+</div>
+    <div class="container">
+	<div class="row">
+		<div class="span12">
+			<h2>
+				event
+			</h2>
+			<p>
+				together, together, together, together, together, together, together, together, .together, together, together, together, together, together, together, together.
+			</p>
+			<p>
+				<a class="btn" href="#">查看更多 »</a>
+			</p>
+		</div>
+	</div>
+</div>
+    <div class="container">
+	<div class="row">
+		<div class="span12">
+			<h2>
+				event
+			</h2>
+			<p>
+				together, together, together, together, together, together, together, together, .together, together, together, together, together, together, together, together.
+			</p>
+			<p>
+				<a class="btn" href="#">查看更多 »</a>
+			</p>
+		</div>
+	</div>
+</div>
+    <div class="container">
+	<div class="row">
+		<div class="span12">
+			<h2>
+				event
+			</h2>
+			<p>
+				together, together, together, together, together, together, together, together, .together, together, together, together, together, together, together, together.
+			</p>
+			<p>
+				<a class="btn" href="#">查看更多 »</a>
+			</p>
+		</div>
+	</div>
+</div>
+    <div class="container">
+	<div class="row">
+		<div class="span12">
+			<h2>
+				event
+			</h2>
+			<p>
+				together, together, together, together, together, together, together, together, .together, together, together, together, together, together, together, together.
+			</p>
+			<p>
+				<a class="btn" href="#">查看更多 »</a>
+			</p>
+		</div>
+	</div>
+</div>
 {% endblock %}
